--- a/index.html
+++ b/index.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <title>SellDirekt</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>SellDirekt.se</title>
+  <meta name="description" content="SellDirekt.se — Sälj direkt. Mer info kommer snart." />
+
+  <style>
+    :root { --bg:#0b0f14; --card:#111827; --text:#e5e7eb; --muted:#9ca3af; --accent:#22c55e; }
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: radial-gradient(1000px 600px at 20% 10%, rgba(34,197,94,.22), transparent 60%),
+                  radial-gradient(900px 500px at 80% 20%, rgba(59,130,246,.18), transparent 55%),
+                  var(--bg);
+      color: var(--text);
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+      padding: 24px;
+    }
+    .wrap { width: 100%; max-width: 980px; }
+    .top {
+      display:flex; align-items:center; justify-content:space-between;
+      gap: 12px; margin-bottom: 22px;
+    }
+    .brand { font-weight: 800; letter-spacing: .2px; font-size: 20px; }
+    .pill {
+      font-size: 12px; color: var(--muted);
+      border: 1px solid rgba(229,231,235,.12);
+      padding: 8px 10px; border-radius: 999px;
+      backdrop-filter: blur(8px);
+      background: rgba(17,24,39,.35);
+    }
+    .card {
+      background: rgba(17,24,39,.65);
+      border: 1px solid rgba(229,231,235,.10);
+      border-radius: 18px;
+      padding: 28px;
+      box-shadow: 0 18px 60px rgba(0,0,0,.35);
+      backdrop-filter: blur(10px);
+    }
+    h1 { margin: 0 0 10px; font-size: clamp(28px, 4vw, 44px); line-height: 1.1; }
+    p { margin: 0 0 14px; color: var(--muted); font-size: 16px; line-height: 1.6; }
+    .ctaRow { display:flex; flex-wrap:wrap; gap: 10px; margin-top: 18px; }
+    .btn {
+      display:inline-flex; align-items:center; justify-content:center;
+      padding: 12px 14px; border-radius: 12px;
+      border: 1px solid rgba(229,231,235,.12);
+      text-decoration:none; color: var(--text);
+      background: rgba(255,255,255,.04);
+      font-weight: 600;
+    }
+    .btn.primary { background: rgba(34,197,94,.15); border-color: rgba(34,197,94,.35); }
+    .grid {
+      display:grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 12px;
+      margin-top: 18px;
+    }
+    .box {
+      padding: 14px;
+      border-radius: 14px;
+      border: 1px solid rgba(229,231,235,.10);
+      background: rgba(17,24,39,.45);
+    }
+    .box h3 { margin: 0 0 6px; font-size: 14px; }
+    .box p { margin: 0; font-size: 13px; }
+    footer { margin-top: 16px; color: rgba(156,163,175,.9); font-size: 12px; text-align: center; }
+    @media (max-width: 800px) { .grid { grid-template-columns: 1fr; } }
+  </style>
 </head>
+
 <body>
-  <h1>SellDirekt.se</h1>
-  <p>Coming soon 🚀</p>
+  <div class="wrap">
+    <div class="top">
+      <div class="brand">SellDirekt.se</div>
+      <div class="pill">🚀 Under uppbyggnad</div>
+    </div>
+
+    <div class="card">
+      <h1>Sälj direkt. Enkelt, tryggt och snabbt.</h1>
+      <p>
+        Vi bygger en plattform som gör det enklare att sälja och köpa direkt — utan krångel.
+        Mer information lanseras snart.
+      </p>
+
+      <div class="ctaRow">
+        <a class="btn primary" href="mailto:hello@selldirekt.se">Kontakta oss</a>
+        <a class="btn" href="/test">Test-sida</a>
+      </div>
+
+      <div class="grid">
+        <div class="box">
+          <h3>✅ Enkelt</h3>
+          <p>Smidigt flöde från start till avslut.</p>
+        </div>
+        <div class="box">
+          <h3>🔒 Tryggt</h3>
+          <p>Fokus på transparens och säkerhet.</p>
+        </div>
+        <div class="box">
+          <h3>⚡ Snabbt</h3>
+          <p>Kom igång på minuter — inte dagar.</p>
+        </div>
+      </div>
+    </div>
+
+    <footer>© <span id="y"></span> SellDirekt.se</footer>
+  </div>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
