--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SellDirekt.se</title>
+  <link rel="stylesheet" href="assets/styles.css">
   <meta name="description" content="SellDirekt.se — Sälj direkt. Mer info kommer snart." />
 
   <style>
