--- a/index.html
+++ b/index.html
@@ -136,10 +136,11 @@
               <div class="tileTitle">För fastigheter</div>
               <div class="tileText">Optimerat för tydlighet, förtroende och konvertering.</div>
             </div>
-            <div class="tile">
-              <div class="tileTitle">Byggt för skalning</div>
-              <div class="tileText">Vi kan lägga till React senare för app-delarna.</div>
-            </div>
+          <div class="tile">
+  <div class="tileTitle">Byggt för framtiden</div>
+  <div class="tileText">Plattformen är designad för att växa med fler funktioner över tid.</div>
+</div>
+
           </aside>
         </div>
 
